# leuven

./: .readthedocs.yml  CMakeLists.txt  README.md  environment.yml  readthedocs.yml
.github/workflows/: cmake.yml  cpu_build.yml  cuda-build  cuda-build.yml  ubuntu_cuda_debug.yml
apps/examples/KSC/: CMakeLists.txt  KscIchol_Test.cc  KscIchol_Train.cc  KscIchol_Tune.cc  Ksc_Test.cc  Ksc_Train.cc  Ksc_Tune.cc  Readme.txt
apps/examples/KSC/docs/source/: bibfile.bib  conf.py  index.rst
apps/examples/KSC/docs/source/_static/: theme_overrides.css  theme_text_align.css
apps/examples/KSC/docs/source/main/: applications.rst  install.rst  introduction.rst
apps/examples/KSC/docs/source/tests/: theTests.rst
apps/examples/KSC/docs/source/tests/test1/: theKSCTest1.rst
apps/examples/KSC/docs/source/tests/test1/figs/: Readme.txt  fig_tuning_1D.eps  fig_tuning_2D.eps
apps/examples/KSC/docs/source/tests/test2/: kscICholTest2.rst  theKSCTest2.rst
apps/examples/KSC/docs/source/tests/test2/figs/: Readme.txt
apps/examples/KSC/docs/source/tests/test2/figs/c16f32/: f_s2p5_1D.eps  f_s2p5_2D.eps  f_s3p5_1D.eps  f_s3p5_2D.eps  f_s4p5_1D.eps  f_s4p5_2D.eps  f_s5p5_1D.eps  f_s5p5_2D.eps  f_s6_AMS_1D.eps  f_s6_AMS_2D.eps  f_s6_BAS_1D.eps  f_s6_BAS_2D.eps  f_s6p0_1D.eps  f_s6p0_2D.eps  f_s6p25_1D.eps  f_s6p25_2D.eps  f_s6p26_1D.eps  f_s6p26_2D.eps
apps/examples/KSC/docs/source/tests/test2/figs/c16f32/encoding/: f_s12_AMS_1D.eps  f_s12_AMS_2D.eps  f_s12_BAS_1D.eps  f_s12_BAS_2D.eps  f_s3_AMS_1D.eps  f_s3_AMS_2D.eps  f_s3_BAS_1D.eps  f_s3_BAS_2D.eps  f_s6_AMS_1D.eps  f_s6_AMS_2D.eps  f_s6_BAS_1D.eps  f_s6_BAS_2D.eps  f_s9_AMS_1D.eps  f_s9_AMS_2D.eps  f_s9_BAS_1D.eps  f_s9_BAS_2D.eps
apps/examples/KSC/docs/source/tests/test2/figs/s1/: fig_test2_tuning_s1_1D.eps  fig_test2_tuning_s1_2D.eps
apps/examples/KSC/docs/source/tests/test2/figs/s2/: fig_test2_tuning_s2_1D.eps  fig_test2_tuning_s2_2D.eps
apps/examples/KSC/docs/source/tests/test3/: kscICholTest3.rst  theKSCTest3.rst
apps/examples/KSC/docs/source/tests/utils/: estimateBW.rst  evaluateClusteringRes.rst  plotClusteringRes.rst  plotResTuning.rst  theUtils.rst
apps/examples/KSC/include/: KscIchol_TestInputPars.hh  KscIchol_TrainInputPars.hh  KscIchol_TuneInputPars.hh  Ksc_TestInputPars.hh  Ksc_TrainInputPars.hh  Ksc_TuneInputPars.hh
apps/examples/KSC/tests/test1/: Readme.md  runKSCIchol_Test.sh  runKSCIchol_Train.sh  runKSCIchol_Tune.sh
apps/examples/KSC/tests/test2/: kscICholTest2.py
apps/examples/KSC/tests/test3/: generateData.py  kscICholTest3.py
apps/examples/KSC/tests/test3/dataSurf2D/: get2D.py
apps/examples/KSC/tests/utils/: bwest.py  estimateBW.py  evaluateClusteringRes.py  plotClusteringRes.py  plotResTuning.py
apps/tests/BlasLapack/xgemm/: CMakeLists.txt  README.dm  test_xgemm.cc
apps/tests/BlasLapack/xgeqrf/: CMakeLists.txt  cuKers.cu  cuKers.h  test_xgeqrf.cc  test_xgeqrf_v2.cc  test_xgeqrf_v2.cu
apps/tests/BlasLapack/xgesvd/: CMakeLists.txt  test_xgesvd.cc  test_xgesvd_v2.cc
apps/tests/BlasLapack/xorgqr/: CMakeLists.txt  cuKers.cu  test_xorgqr.cc
apps/tests/BlasLapack/xsyevr/: CMakeLists.txt  test_xsyevr.cc
apps/tests/BlasLapack/xsysv/: CMakeLists.txt  test_xsysv.cc
apps/tests/Matrix/FileReadWrite/: CMakeLists.txt  test_RWMatrix.cc
apps/tests/Matrix/IncopleteCholesky/: CMakeLists.txt  test_IChol.cc
cmake/: definitions.hh.in  leuvenConfig.cmake.in
cmake/Modules/: FindAtlasBLAS.cmake  FindMKL.cmake  FindNETLIB_BLAS.cmake  FindOpenBLAS.cmake
cmake/Modules/FindCUDA/: make2cmake.cmake  parse_cubin.cmake
docs/: Doxyfile.in  requires.txt
docs/source/: bibfile.bib  conf.py  index.rst
docs/source/apps/: theApps.rst
docs/source/lssvm/ksc/: ksc.rst  theKSCApplications.rst  theKsc.rst
docs/source/lssvm/utils/: IncompleteCholeskyDecomposition.rst  theUtils.rst  utils.rst
docs/source/main/: install.rst  introduction.rst
lssvm/: CMakeLists.txt
lssvm/ksc/inc/: KscEncodingAndQM.hh  KscEncodingAndQM_AMS.hh  KscEncodingAndQM_BAS.hh  KscEncodingAndQM_BLF.hh  KscWkpca.hh  KscWkpca.tpp  KscWkpcaIChol.hh  KscWkpcaIChol.tpp
lssvm/utils/inc/: IncCholesky.hh  IncCholesky.tpp  KernelChi2.tpp  KernelRBF.tpp  KernelSSK.tpp  Kernels.hh
testing/: CMakeLists.txt
testing/scripts/actions/: install_cuda_ubuntu.sh
utils/: CMakeLists.txt
utils/inc/: CBLAS.hh  CBLAS.tpp  CUBLAS.hh  CUBLAS.tpp  FBLAS.h  FBLAS.hh  FBLAS.tpp  XBLAS.tpp
utils/inc/global/: Matrix.hh  cudaUtils.hh  cxxopts.hh  definitions.hh  types.hh
utils/src/: CBLAS.cc  CUBLAS.cu  FBLAS.cc
